[gd_scene load_steps=23 format=2]

[ext_resource path="res://Components/sprite/entity_sprite.tscn" type="PackedScene" id=1]
[ext_resource path="res://Components/stats/stats.tscn" type="PackedScene" id=2]
[ext_resource path="res://Entities/heart_mimic/heart_mimic.gd" type="Script" id=3]
[ext_resource path="res://Entities/heart_mimic/heart_mimic.png" type="Texture" id=4]
[ext_resource path="res://Components/hitbox/hitbox.tscn" type="PackedScene" id=5]
[ext_resource path="res://Components/entity_push/entity_push.tscn" type="PackedScene" id=6]
[ext_resource path="res://Components/brain/brain.tscn" type="PackedScene" id=7]
[ext_resource path="res://Components/brain/movement_lobe/movement_lobe.tscn" type="PackedScene" id=8]
[ext_resource path="res://Components/sleeper/sleeper.tscn" type="PackedScene" id=9]
[ext_resource path="res://Components/health_bar/health_bar.tscn" type="PackedScene" id=10]
[ext_resource path="res://Effects/entity_effects/entity_effects.tscn" type="PackedScene" id=11]
[ext_resource path="res://Components/sound_player/foot_stepper/foot_stepper.tscn" type="PackedScene" id=12]
[ext_resource path="res://Components/hurtbox/hurtbox.tscn" type="PackedScene" id=13]
[ext_resource path="res://Components/brain/memory_lobe/memory_lobe.tscn" type="PackedScene" id=14]
[ext_resource path="res://Entities/heart_mimic/heart_mimic_reveal.wav" type="AudioStream" id=15]

[sub_resource type="CircleShape2D" id=1]
radius = 24.0

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true

[sub_resource type="Animation" id=3]
resource_name = "awaken"
length = 0.7
step = 0.086
tracks/0/type = "value"
tracks/0/path = NodePath("entity_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.086, 0.172, 0.258, 0.344, 0.43, 0.516, 0.602 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("hitbox:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.602 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 2 ), Vector2( 0, -6 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("hurtbox:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.602 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 2 ), Vector2( 0, -6 ) ]
}
tracks/3/type = "audio"
tracks/3/path = NodePath("AudioStreamPlayer2D")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 15 )
} ],
"times": PoolRealArray( 0.086 )
}

[sub_resource type="Animation" id=4]
resource_name = "run"
length = 0.332
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("entity_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10 ]
}

[sub_resource type="CircleShape2D" id=5]
radius = 6.68922

[sub_resource type="CircleShape2D" id=6]
radius = 7.93647

[sub_resource type="CircleShape2D" id=7]
radius = 9.41273

[node name="heart_mimic" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 3 )
ACCELERATION = 200
SLOWDOWN = 200
TOP_SPEED = 90
FORCE_MULT = 1.2
INVISIBLE = true
truName = "heart_mimic"
faction = "solo"

[node name="detection" type="Area2D" parent="."]
position = Vector2( 0, 2 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection"]
shape = SubResource( 1 )

[node name="stats" parent="." instance=ExtResource( 2 )]
MAX_HEALTH = 16
HEALTH = 16
DAMAGE = 5

[node name="entity_sprite" parent="." instance=ExtResource( 1 )]
material = SubResource( 2 )
texture = ExtResource( 4 )
hframes = 11
auto_flip_mode = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/awaken = SubResource( 3 )
anims/run = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -0.297302, -5.05413 )
shape = SubResource( 5 )

[node name="hitbox" parent="." instance=ExtResource( 5 )]
visible = false
position = Vector2( 0, 2 )
TEAM_ATTACK = false

[node name="CollisionShape2D" parent="hitbox" index="0"]
shape = SubResource( 6 )

[node name="hurtbox" parent="." instance=ExtResource( 13 )]
visible = false
position = Vector2( 0, 2 )

[node name="CollisionShape2D" parent="hurtbox" index="0"]
shape = SubResource( 7 )

[node name="entity_push" parent="." instance=ExtResource( 6 )]
visible = false
position = Vector2( -0.445953, -5.35143 )

[node name="CollisionShape2D" parent="entity_push" index="0"]
shape = SubResource( 5 )

[node name="brain" parent="." instance=ExtResource( 7 )]
SIGHT_RANGE = 100.0
MAX_TARGETS = 3
SIGHT_EFFECTS = false

[node name="movement_lobe" parent="brain" instance=ExtResource( 8 )]
IDLE_TIME = 0.25
IDLE_OFFSET = 0.2
WANDER_TIME = 0.4
WANDER_OFFSET = 0.35
WANDER_SPEED = 0.5
WANDER_RANGE = 999.0
SMART_SLOWDOWN = false
MOVEMENT_EFFICIENCY = 10

[node name="memory_lobe" parent="brain" instance=ExtResource( 14 )]
MEMORY_TIME = 8.0

[node name="sleeper" parent="." instance=ExtResource( 9 )]
visible = false

[node name="health_bar" parent="." instance=ExtResource( 10 )]
visible = false
margin_left = -10.7029
margin_top = -13.0813
margin_right = 11.2971
margin_bottom = -9.07954

[node name="entity_effects" parent="." instance=ExtResource( 11 )]
death_type = 0

[node name="foot_stepper" parent="." instance=ExtResource( 12 )]
CONSTANT_RATE = true
VOLUME_ADJUST = 0.0

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 15 )
volume_db = 8.0

[connection signal="body_entered" from="detection" to="." method="_on_detection_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="got_hit" from="hurtbox" to="." method="_on_hurtbox_got_hit"]
[connection signal="found_target" from="brain" to="." method="_on_brain_found_target"]

[editable path="entity_sprite"]
[editable path="hitbox"]
[editable path="hurtbox"]
[editable path="entity_push"]
